--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-pipecat-ai[webrtc,silero,deepgram,openai,cartesia,runner]>=0.0.77
+pipecat-ai[webrtc,silero,deepgram,openai,cartesia,runner,daily]>=0.0.77
+requests>=2.31.0
